# bedrock-protocol-rs

./: .gitignore  Cargo.toml  MAINTENANCE.md  README.md
.github/workflows/: build.yml  nightly.yml
crates/bedrock-binary-stream/: Cargo.toml  README.md
crates/bedrock-binary-stream/src/: lib.rs  read.rs  write.rs
crates/bedrock-codegen/: Cargo.toml  README.md
crates/bedrock-codegen/src/: lib.rs  naming.rs  type_mapping.rs
crates/bedrock-common/: Cargo.toml  README.md
crates/bedrock-common/src/: error.rs  lib.rs  traits.rs  varint.rs
crates/bedrock-ffi/: Cargo.toml  README.md
crates/bedrock-ffi/src/: lib.rs
crates/bedrock-nbt/: Cargo.toml  README.md
crates/bedrock-nbt/src/: compound.rs  decode.rs  encode.rs  lib.rs  list.rs  snbt.rs  tag.rs
crates/bedrock-protocol/: Cargo.toml  README.md  build.rs
crates/bedrock-protocol-data/: Cargo.toml  README.md
crates/bedrock-protocol-data/data/: v1001.json  v897.json  v924.json  v944.json  v975.json
crates/bedrock-protocol-data/src/: lib.rs
crates/bedrock-protocol-schema/: Cargo.toml  README.md
crates/bedrock-protocol-schema/src/: embed.rs  enum.rs  field.rs  lib.rs  packet.rs  parse.rs  registry.rs  type.rs
crates/bedrock-protocol/src/: ids.rs  lib.rs  packet.rs  unimplemented.rs
crates/bedrock-protocol/src/types/: block_pos.rs  full_container_name.rs  item_data.rs  item_stack_request.rs  mod.rs  uuid.rs  vec3.rs
