[workspace]
members = [
    "crates/bedrock-common",
    "crates/bedrock-binary-stream",
    "crates/bedrock-protocol-schema",
    "crates/bedrock-codegen",
    "crates/bedrock-protocol",
    "crates/bedrock-ffi",
    "crates/bedrock-protocol-data",
    "crates/bedrock-nbt",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
