[package]
name = "bedrock-protocol-data"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pre-generated Bedrock protocol version data (embedded JSON blobs)"

[dependencies]
bedrock-protocol-schema = { path = "../bedrock-protocol-schema" }
serde_json = "1"

[[bin]]
name = "generate-data"
path = "src/bin/generate-data.rs"
